# lemmy_desktop

./: README.md  api.vala  appmenu.cmb  appmenu.ui  com.github.albert-tomanek.lemmy-desktop.gschema.xml  com.github.alberttomanek.lemmy-desktop.gschema.xml  com.github.alberttomanek.lemmy-desktop.yaml  comments.cmb  comments.ui  comments.vala  login_dialog.cmb  login_dialog.ui  main.cmb  main.ui  main.vala  meson.build  misc.vala  post_widget.cmb  post_widget.ui  resource.xml  settings.cmb  settings.ui  style.css
